syntax = "proto3";

package meta_server_proto;
option go_package = "github.com/rfeverything/rfs/internal/proto/meta_server_proto";

service MetaServer{
    rpc ListDir(ListDirRequest) returns (ListDirResponse) {}
    rpc GetFile(GetFileRequest) returns (GetFileResponse) {}
    rpc PutFile(PutFileRequest) returns (PutFileResponse) {}

    rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse) {}
    rpc RenameFile(RenameFileRequest) returns (RenameFileResponse) {}
    rpc MkDir(MkDirRequest) returns (MkDirResponse) {}
    rpc RmDir(RmDirRequest) returns (RmDirResponse) {}
    rpc Stat(StatRequest) returns (StatResponse) {}
    rpc GetVolume(GetVolumeRequest) returns (GetVolumeResponse) {}
    rpc GetVolumeList(GetVolumeListRequest) returns (GetVolumeListResponse) {}
    rpc GetVolumeInfo(GetVolumeInfoRequest) returns (GetVolumeInfoResponse) {}
    rpc GetVolumeInfoList(GetVolumeInfoListRequest) returns (GetVolumeInfoListResponse) {}
    rpc GetVolumeInfoListByVolume(GetVolumeInfoListByVolumeRequest) returns (GetVolumeInfoListByVolumeResponse) {}

    rpc Ping(PingRequest) returns (PingResponse) {}
}

message PingRequest {
    string target = 1;
    string target_type = 2;
}
message PingResponse {
    int64 start_time_ns = 1;
    int64 remote_time_ns = 2;
    int64 stop_time_ns = 3;
}
